style.css
html {
  background-image: url(carpet.jpg);
  background-size: contain;
}

header{
  top: 0rem;
  font-family: 'Homemade Apple', cursive;
  color: #00004d;
  font-size: 1.6rem;
  text-align: center;
}

footer {
  position: relative;
  bottom: 0rem;
  font-family: 'Coming Soon', cursive;
  font-weight: bold;
  font-size: 1.6rem;
  color: #00004d;
  text-align: center;
}

a {
  text-decoration: none;
}

footer a:hover {
  color: #ff4da6;
}

footer a:visited {
  text-decoration: none;
}

ol {
	display: flex;
	flex-flow: row nowrap;
	justify-content: space-between;
	width: 95%;
	height: 80%;
}

ol li {
  z-index: 20;
  width: 4rem;
  list-style: none;
  border-radius: 7%;
  border-top: .2rem;
  border-top-color: rgba(255, 255, 255, .3);
  border-top-style:solid;
  border-left: .1rem;
  border-left-color: rgba(255, 255, 255, .5);
  border-left-style:solid;
  border-bottom: .3rem;
  border-bottom-color: rgba(0, 0, 0, .3);
  border-bottom-style: solid;
  border-right: .3rem;
  border-right-color: rgba(0, 0, 0, .4);
  border-right-style: solid;
  z-index: 1;
}

ul {
	position: relative;
	left: -1rem;
	display: flex;
	flex-flow: column nowrap;
	justify-content: space-between;
	height: 100%;
	width: 100%;
}

ul>li {
	display: block;
  background-image:url(wood.jpg);
  list-style: none;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  z-index: 50;
}

ul>li:first-child{margin-top: 60%;}
ul>li:last-child{margin-bottom: 60%;}

/*

li.C {
  margin-top: 15.6rem;
  margin-left: -1.6rem;
}

li.D {
  margin-top: 14rem;
  margin-left: -1.6rem;
}

li.E {
  margin-top: 12.5rem;
  margin-left: -1.55rem;
}

li.F {
  margin-top: 11rem;
  margin-left: -1.55rem;
}

li.G {
  margin-top: 9.7rem;
  margin-left: -1.55rem;
}

li.A {
  margin-top: 8.4rem;
  margin-left: -1.55rem;
}

li.B {
  margin-top: 7.2rem;
  margin-left: -1.55rem;
}

li.Do {
  margin-top: 6rem;
  margin-left: -1.55rem;
}
*/

#red {
  height:20rem;
  background-color: #cc0000;
}

#orange {
  height:18.48rem;
  background-color: #ff6600;
}

#yellow {
  height:17.06rem;
  background-color: #ffcc00;
}

#green {
  height:15.64rem;
  background-color: #009900;
}

#cyan {
  height:14.22rem;
  background-color: #0099cc;
}

#blue {
  height:12.8rem;
  background-color: #0000cc;
}

#purple {
  height:11.38rem;
  background-color: #660066;
}

#pink {
  height:10rem;
  background-color: #ff3399;
}

#wood {
	display: flex;
	flex-flow: row nowrap;
	align-items:center;
	justify-content: center;
	align-content: center;
	margin-right: auto;
  margin-left: auto;
  width: 44rem;
  height: 26rem;
  border-radius: 15%;
  background-image:url(wood.jpg);
  background-size:contain;
  border-top: .5rem;
  border-top-color: rgba(255, 255, 255, .3);
  border-top-style:solid;
  border-left: .3rem;
  border-left-color: rgba(255, 255, 255, .5);
  border-left-style:solid;
  border-bottom: .5rem;
  border-bottom-color: rgba(0, 0, 0, .3);
  border-bottom-style: solid;
  border-right: .5rem;
  border-right-color: rgba(0, 0, 0, .4);
  border-right-style: solid;
  z-index: 1;
}

@media screen and (max-width: 47.625em){
	#wood {transform: rotate(90deg);}
}

#hidden {
	display: none;
}

